<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/nav_home"
        android:title="Home"
        android:icon="@drawable/ic_akar_icons_home" />

    <item android:id="@+id/nav_cart"
        android:title="Cart"
        android:icon="@drawable/ic_carbon_shopping_cart" />

    <item android:id="@+id/nav_category"
        android:title="Categories"
        android:icon="@drawable/ic_carbon_search_locate" />
    <item android:id="@+id/nav_profile"
        android:title="Profile"
        android:icon="@drawable/ic_profile" />
</menu>