<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navigation_bar_container"
    tools:context=".activities.HomeActivity"
    style="@style/SCREEN">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        />

    <RelativeLayout
        style="@style/SCREEN"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:navigationIcon="@drawable/ic_drawer"
            app:titleTextColor="@android:color/transparent" />


            <Switch
                android:id="@+id/switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="52dp"/>

            <TextView
                android:id="@+id/project"
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/gideon_roman"
                android:text="@string/project"
                android:textSize="25sp"
                />


    </RelativeLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:elevation="2dp"
        app:menu="@menu/navbar_item_menu"
        style="@style/NAVBARBACK"
        android:background="@drawable/navbar_corners"
        app:itemRippleColor="@color/black"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@drawable/item_selector"
        android:id="@+id/bottom_navigation"/>





</RelativeLayout>