<resources>
    <string name="app_name">Tynda</string>
    <string name="project">Project</string>
    <string name="wellcome">Welcome to</string>
    <string name="registration">Registration</string>
    <string name="signIn">Sign In</string>
    <string name="comeBack">Come Back!</string>
    <string name="prompt_email">email@mail.com</string>
    <string name="promt_password">**********</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="next">Next</string>
    <string name="create">Create</string>
    <string name="account">an account</string>
    <string name="prompt_name">Your Name</string>
    <string name="name">Name:</string>
    <string name="signUp">Sign Up</string>

    <string name="productDetailName">Ankle-length Pants</string>
    <string name="productCategoryName">Conscious choice</string>
    <string name="productPrice">$29.99</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi euismod diam in condimentum suscipit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">App widget</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>